--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+        </dependency>
+
 
     </dependencies>
 
