--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,19 @@
             <version>8.0.33</version>
         </dependency>
 
+<!--        json support-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10</version>
+        </dependency>
+
+<!--        redis support-->
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.1.4</version>
         </dependency>
 
 
