--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,15 @@
             <version>5.1.4</version>
         </dependency>
 
+<!--        mongo support-->
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
+
 
     </dependencies>
 
