--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
+### Java template
 # Compiled class file
 *.class
 
-/target
-*.conn
-/.idea
-
 # Log file
 *.log
+target
+.idea
 
 # BlueJ files
 *.ctxt
@@ -26,3 +25,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
